PACKAGE_BUGREPORT = "devel@openvz.org"

TEST_LOG_DRIVER = env AM_TAP_AWK='$(AWK)' $(SHELL) \
                  $(top_srcdir)/build-aux/tap-driver.sh

TESTS = tests/rlc00_main							\
		tests/rlc00_main2							\
		tests/copytest_main							\
		tests/copytestraw_main						\
		tests/offline_resize_main					\
		tests/online_resize_main					\
		tests/online_resize_main2					\
		tests/online_resize_io_main					\
		tests/online_resize_io_main2				\
		tests/offline_resizeraw_main				\
		tests/online_resizeraw_main					\
		tests/online_resizeraw_main2				\
		tests/snap_main								\
		tests/snap_main2							\
		tests/snapraw_main							\
		tests/snapraw_main_							\
		tests/snapraw_main2							\
		tests/snap_and_rlc_main						\
		tests/offline_merge_main					\
		tests/offline_merge_main2					\
		tests/offline_merge_main3					\
		tests/offline_merge_and_resize_main			\
		tests/offline_merge_and_resize_main_		\
		tests/offline_merge_and_resize_main2		\
		tests/offline_merge_and_resize_main3		\
		tests/offline_merge_and_resize_main4		\
		tests/offline_merge_and_resize_main5		\
		tests/offline_merge_and_resize_main6		\
		tests/offline_merge_and_resize_big_main6	\
		tests/offline_merge_and_resize_main7		\
		tests/offline_merge_and_resize_big_main7	\
		tests/offline_mergeraw_main					\
		tests/offline_mergeraw_main2				\
		tests/offline_mergeraw_main3				\
		tests/offline_merge_and_resizeraw_main		\
		tests/offline_merge_and_resizeraw_main_		\
		tests/offline_merge_and_resizeraw_main2		\
		tests/offline_merge_and_resizeraw_main3		\
		tests/offline_merge_and_resizeraw_main4		\
		tests/offline_merge_and_resizeraw_main5		\
		tests/offline_merge_and_resizeraw_main6		\
		tests/offline_merge_and_resizeraw_big_main6	\
		tests/offline_merge_and_resizeraw_main7		\
		tests/offline_merge_and_resizeraw_big_main7	\
		tests/online_merge_main						\
		tests/online_merge_main_					\
		tests/online_merge_main2					\
		tests/online_merge_main2_					\
		tests/online_merge_main3					\
		tests/online_merge_main3_					\
		tests/online_merge_main4					\
		tests/online_merge_main4_					\
		tests/online_merge_main5					\
		tests/online_merge_main5_					\
		tests/online_merge_and_resize_main			\
		tests/online_merge_and_resize_big_main		\
		tests/online_merge_and_resize_main_			\
		tests/online_merge_and_resize_big_main_		\
		tests/online_merge_and_resize_main2			\
		tests/online_merge_and_resize_main3			\
		tests/online_merge_and_resize_main4			\
		tests/online_merge_and_resize_main4_		\
		tests/online_merge_and_resize_main4__		\
		tests/online_merge_and_resize_main6			\
		tests/online_merge_and_resize_big_main6		\
		tests/online_merge_and_resize_main6_		\
		tests/online_merge_and_resize_big_main6_	\
		tests/online_merge_and_resize_main7			\
		tests/online_merge_and_resize_big_main7		\
		tests/online_merge_and_resize_main7_		\
		tests/online_merge_and_resize_big_main7_	\
		tests/online_merge_io_main					\
		tests/online_mergeraw_main					\
		tests/online_mergeraw_main_					\
		tests/online_mergeraw_main2					\
		tests/online_mergeraw_main2_				\
		tests/online_mergeraw_main3					\
		tests/online_mergeraw_main3_				\
		tests/online_mergeraw_main4					\
		tests/online_mergeraw_main4_				\
		tests/online_mergeraw_main5					\
		tests/online_mergeraw_main5_				\
		tests/online_merge_and_resizeraw_main		\
		tests/online_merge_and_resizeraw_big_main	\
		tests/online_merge_and_resizeraw_main_		\
		tests/online_merge_and_resizeraw_big_main_	\
		tests/online_merge_and_resizeraw_main2		\
		tests/online_merge_and_resizeraw_main3		\
		tests/online_merge_and_resizeraw_main4		\
		tests/online_merge_and_resizeraw_main4_		\
		tests/online_merge_and_resizeraw_main4__	\
		tests/online_merge_and_resizeraw_main6		\
		tests/online_merge_and_resizeraw_big_main6	\
		tests/online_merge_and_resizeraw_main6_		\
		tests/online_merge_and_resizeraw_big_main6_	\
		tests/online_merge_and_resizeraw_main7		\
		tests/online_merge_and_resizeraw_big_main7	\
		tests/online_merge_and_resize_main7_		\
		tests/online_merge_and_resizeraw_big_main7_
#		rlc_random									\
#		rlc_random2									\
#		rlc_random3

EXTRA_DIST = $(TESTS)
